[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fin-integrity-fastapi"
version = "0.1.0"
description = "FastAPI integration for fin-integrity — lifespan initialiser and a drop-in Stripe webhook router."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "fin-integrity" }]
keywords = ["fastapi", "reconciliation", "fintech", "payments", "stripe", "ledger", "asgi"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
]
dependencies = ["fin-integrity>=0.1.0", "fastapi>=0.100"]

[project.optional-dependencies]
stripe = ["stripe>=5"]

[project.urls]
Homepage = "https://github.com/HatemSaadallah/fin-integrity-fastapi"
Issues = "https://github.com/HatemSaadallah/fin-integrity-fastapi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fin_integrity_fastapi"]
